refactor: Componentes separados
